Can now display numpy double arrays as images, not just unsigned char arrays.
Added a flipy arg to CanvasImage::newFromNumpy, so that OOF2 doesn't have
to work hard to display images right side up.

Updated the manual.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -390,6 +390,9 @@ if(${OOFCANVAS_USE_IMAGEMAGICK})
   list(APPEND PKG_CONFIG_CFLAGS -DOOFCANVAS_USE_IMAGEMAGICK)
   list(APPEND PKG_CONFIG_CFLAGS ${MAGICK_CFLAGS_OTHER})
 endif()
+if(${OOFCANVAS_USE_NUMPY})
+  list(APPEND PKG_CONFIG_CFLAGS -DOOFCANVAS_USE_NUMPY)
+endif()
 if(NOT ${PYTHON_API} STREQUAL None)
   list(APPEND PKG_CONFIG_CFLAGS "-DOOFCANVAS_USE_PYTHON=${PYMAJOR}")
 endif()
