Minor cosmetic change.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -262,7 +262,7 @@ if(${PYTHON_API} STREQUAL Python3)
     COMPONENTS Interpreter Development)
   #find_package(Python3 COMPONENTS Interpreter Development)
   set(OOFCANVAS_PYTHON_VERSION ${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR})
-elseif(${PYTHON_API} STREQUAL Python2)
+elseif()
   set(PYMAJOR 2)
   find_package(Python2 2.7 COMPONENTS Interpreter Development)
   set(OOFCANVAS_PYTHON_VERSION ${Python2_VERSION_MAJOR}.${Python2_VERSION_MINOR})
