--- a/make_dist.in
+++ b/make_dist.in
@@ -25,11 +25,11 @@ import time
 ## Utilities
 
 def osCall(*args):
-    print >> sys.stderr, "--->", ' '.join(args)
+    print("--->", ' '.join(args), file=sys.stderr)
     status = subprocess.call(args)
     if status != 0:
-        print >> sys.stderr, "Failed to execute", ' '.join(args)
-        print >> sys.stderr, "Aborting!"
+        print("Failed to execute", ' '.join(args), file=sys.stderr)
+        print("Aborting!", file=sys.stderr)
         sys.exit(status)
         
 def run_sed(sedcmd, srcdir, srcfile):
@@ -47,7 +47,7 @@ def run_sed(sedcmd, srcdir, srcfile):
                             stderr=subprocess.PIPE)
     stdoutdata, stderrdata = proc.communicate()
     if proc.returncode != 0:
-        print >> sys.stderr, "sed command failed:", stderrdata
+        print("sed command failed:", stderrdata, file=sys.stderr)
         sys.exit(proc.returncode)
     dest.close()
     os.rename(destpath, srcpath)
@@ -55,12 +55,10 @@ def run_sed(sedcmd, srcdir, srcfile):
 
 #=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=#
 
-options = ['version=', 'comment=', 'dryrun', 'help', 'noclean', 'branch=']
+options = ['comment=', 'dryrun', 'help', 'noclean', 'branch=']
 
 def state_options_and_quit():
-    print >> sys.stderr,  \
-"""Options are:
---version=<version number> Version number.
+    print("""Options are:
 --comment=<comment>        Optional comment, cannot contain dots or spaces 
 
 Debugging options are:
@@ -69,11 +67,11 @@ Debugging options are:
 --branch=<branchname>  Use branch, not master.  Implies --dryrun and --noclean
                        Real distributions are always made without --branch.
 --help                 Print this
-"""
+""", file=sys.stderr)
     sys.exit()
 
 
-version = None
+version = "@oofcanvas_VERSION@"
 comment = None
 branch = None
 dryrun = False
@@ -81,14 +79,12 @@ noclean = False
 
 try:
     optlist, args = getopt.getopt(sys.argv[1:], '', options)
-except getopt.error, message:
-    print message
+except getopt.error as message:
+    print(message)
     sys.exit()
 
 for opt in optlist:
-    if opt[0] == '--version':
-        version = opt[1]
-    elif opt[0] == '--comment':
+    if opt[0] == '--comment':
         comment = opt[1]
     elif opt[0] == '--noclean':
         noclean = True
@@ -101,15 +97,13 @@ for opt in optlist:
     elif opt[0] == '--help':
         state_options_and_quit()
 
-assert version is not None
-
 startdir = os.getcwd()
 
 distname = "oofcanvas"
 
 # Create a temp working directory.
 tempdir = tempfile.mkdtemp(prefix="oofcanvas-tempdir-" + version + "-")
-print >> sys.stderr, "Using temp directory", tempdir
+print("Using temp directory", tempdir, file=sys.stderr)
 
 try:
     # Get the git repository location
@@ -117,13 +111,13 @@ try:
                             stdout=subprocess.PIPE, stderr=subprocess.PIPE)
     stdoutdata,stderrdata = proc.communicate()
     if stderrdata:
-        print >> sys.stderr, "*** Failed to get git repository!", \
-            stderrdata.strip()
+        print("*** Failed to get git repository!", \
+            stderrdata.strip(), file=sys.stderr)
         sys.exit(1)
     giturl = stdoutdata.strip()
 
     # cd to the temp directory
-    print >> sys.stderr, "Changing directory to", tempdir
+    print("Changing directory to", tempdir, file=sys.stderr)
     os.chdir(tempdir)
 
     # Clone the git repository whose name is given by the OOFCanvas
@@ -136,7 +130,7 @@ try:
     osCall(*cmd)
 
     # cd to the cloned source code directory
-    print >> sys.stderr, "Changing directory to", distdir
+    print("Changing directory to", distdir, file=sys.stderr)
     os.chdir(distdir)
 
     # Construct the commit message and new branch name
@@ -156,8 +150,8 @@ try:
     if proc.returncode == 0:    # success
         tag = stdoutdata.strip()
     else:
-        print >> sys.stderr, "Failed to convert '%s' to a legal tag." % tag
-        print >> sys.stderr, "Using '%s' instead." % oldtag
+        print("Failed to convert '%s' to a legal tag." % tag, file=sys.stderr)
+        print("Using '%s' instead." % oldtag, file=sys.stderr)
         tag = oldtag
 
     # Create a branch for the release
@@ -173,58 +167,57 @@ try:
     else:
         # The branch already exists.  Check it out, and merge the
         # current master into it.  There *should* be no conflicts in
-        # the merge, since nobod 
+        # the merge.
         newbranch = False
         osCall('git', 'checkout', tag)
-        print >> sys.stderr, "Merging master branch into", tag
+        print("Merging master branch into", tag, file=sys.stderr)
         proc = subprocess.Popen(['git', 'merge', '--no-edit', 'master'],
                                 stdout=subprocess.PIPE, stderr=subprocess.PIPE)
         stdoutdata, stderrdata = proc.communicate()
-        print >> sys.stderr, stdoutdata
+        print(stdoutdata, file=sys.stderr)
         if proc.returncode != 0:
-            print >> sys.stderr, stderrdata
-            print >> sys.stderr, "Failed to merge master into", tag
+            print(stderrdata, file=sys.stderr)
+            print("Failed to merge master into", tag, file=sys.stderr)
             sys.exit(1)
 
 
-    # Set the version number in setup.py and oofcanvas/version.C
-    # The sed command finds a line beginning with
-    # "version_from_make_dist" and replaces everything after the
-    # equals sign with a string containing the version number.
-    sedcmd = '/^version_from_make_dist/s/=.*/= \\\"%s\\\"/' % version
-    run_sed(sedcmd, "", "setup.py")
-    run_sed(sedcmd, "oofcanvas", "version.C")
+    # # Set the version number in setup.py and oofcanvas/version.C
+    # # The sed command finds a line beginning with
+    # # "version_from_make_dist" and replaces everything after the
+    # # equals sign with a string containing the version number.
+    # sedcmd = '/^version_from_make_dist/s/=.*/= \\\"%s\\\"/' % version
+    # run_sed(sedcmd, "", "setup.py")
+    # run_sed(sedcmd, "oofcanvas", "version.C")
     
                            
-    # Check all the modifications into git, and tag with the version
-    # number.  It's necessary to go back to the distribution directory
-    # to use git.
-    osCall('git', 'add', 'oofcanvas/version.C', 'setup.py')
+    # # Check all the modifications into git, and tag with the version
+    # # number.  It's necessary to go back to the distribution directory
+    # # to use git.
+    # osCall('git', 'add', 'oofcanvas/version.C', 'setup.py')
 
-    cmd = ['git', 'commit', '--allow-empty', '-m', commit_msg]
-    print >> sys.stderr, '--->', ' '.join(cmd)
-    if not dryrun:
-        proc = subprocess.Popen(cmd, stdout=subprocess.PIPE,
-                                stderr=subprocess.PIPE)
-        stdoutdata, stderrdata = proc.communicate()
-        if proc.returncode != 0:
-            print >> sys.stderr, "Back from commit, status=", proc.returncode
-            print >> sys.stderr, "stdoutdata=", stdoutdata
-            print >> sys.stderr, "stderrdata=", stderrdata
-            sys.exit(0)
+    # cmd = ['git', 'commit', '--allow-empty', '-m', commit_msg]
+    # print('--->', ' '.join(cmd), file=sys.stderr)
+    # if not dryrun:
+    #     proc = subprocess.Popen(cmd, stdout=subprocess.PIPE,
+    #                             stderr=subprocess.PIPE)
+    #     stdoutdata, stderrdata = proc.communicate()
+    #     if proc.returncode != 0:
+    #         print("Back from commit, status=", proc.returncode, file=sys.stderr)
+    #         print("stdoutdata=", stdoutdata, file=sys.stderr)
+    #         print("stderrdata=", stderrdata, file=sys.stderr)
+    #         sys.exit(0)
 
+    # Push the modifications to the server, unless this is just a dry
+    # run.
     if not newbranch:
         cmd = ['git', 'push', 'origin', tag]
     else:
         cmd = ['git', 'push', '--set-upstream', 'origin', tag]
-
-    # Push the modifications to the server, unless this is just a dry
-    # run.
     if not dryrun:
         osCall(*cmd)
     else:
-        print >> sys.stderr, "Dry run! Not running:"
-        print >> sys.stderr, " ".join(cmd)
+        print("Dry run! Not running:", file=sys.stderr)
+        print(" ".join(cmd), file=sys.stderr)
 
     # The distribution includes two files, MANIFEST and package_date,
     # that aren't in git, and are therefore constructed only now that
@@ -232,14 +225,14 @@ try:
         
     # Make a timestamp file for the distribution.
     timefile = open("package_date", "w")
-    print >> timefile, time.ctime()
+    print(time.ctime(), file=timefile)
     timefile.close()
     
     # Make the MANIFEST file after moving back up to the temp
     # directory.  Moving up to the temp directory means that the path
     # names in the file will all start with "oofcanvas-[version]/",
     # which is nice and modular.
-    print >> sys.stderr, "Changing directory to", tempdir
+    print("Changing directory to", tempdir, file=sys.stderr)
     os.chdir(tempdir)
 
     # We aren't using distutils to automatically create a MANIFEST
@@ -248,9 +241,9 @@ try:
     # distutils here at all.
 
     # Directories that are in git but should not be distributed
-    excludeDirs = [".git", "TEST", "OOFSWIG/Tests" ]
+    excludeDirs = [".git", "TEST"]
     # Files that are in in git but should not be distributed
-    excludeFiles = ["make_dist", ".gitignore", "TODO.txt"]
+    excludeFiles = ["make_dist.in", ".gitignore", "TODO.txt"]
 
     excludeDirs = [os.path.join(distdir, f) for f in excludeDirs]
     excludeFiles = [os.path.join(distdir, f) for f in excludeFiles]
@@ -264,33 +257,33 @@ try:
                 else:
                     fname = f
                 if (os.path.isfile(fname) and fname not in excludeFiles):
-                    print >> manifest, fname
+                    print(fname, file=manifest)
                 if (os.path.isdir(fname) and fname not in excludeDirs):
                     getFiles(fname, manifest)
 
-    print >> sys.stderr, "Building MANIFEST"
+    print("Building MANIFEST", file=sys.stderr)
     manifest = open(os.path.join(distdir, "MANIFEST"), "w")
     getFiles(distdir, manifest)
     manifest.close()
 
     # Build the distribution
     distfilename = distdir + ".tar.gz"
-    print >> sys.stderr, "Distribution file is", distfilename
+    print("Distribution file is", distfilename, file=sys.stderr)
 
     cmd = ['tar', '-T', os.path.join(distdir, 'MANIFEST'), '-czf', distfilename]
     osCall(*cmd)
-    print >> sys.stderr, "Moving", distfilename, "to", startdir
+    print("Moving", distfilename, "to", startdir, file=sys.stderr)
     finaldistfilename = os.path.join(startdir, distfilename)
     os.rename(distfilename, finaldistfilename)
 
 finally:
     if not noclean:
-        print >> sys.stderr, "Removing", tempdir
+        print("Removing", tempdir, file=sys.stderr)
         shutil.rmtree(tempdir)
     else:
-        print >> sys.stderr, "Not removing", tempdir
+        print("Not removing", tempdir, file=sys.stderr)
 
-print >> sys.stderr, "Done", distfilename, "is ready."
+print("Done", distfilename, "is ready.", file=sys.stderr)
 osCall("openssl", "dgst", "-md5", finaldistfilename)
 osCall("openssl", "dgst", "-rmd160", finaldistfilename)
 osCall("openssl", "dgst", "-sha256", finaldistfilename)
