--- a/make_dist.in
+++ b/make_dist.in
@@ -99,8 +99,6 @@ for opt in optlist:
 
 startdir = os.getcwd()
 
-distname = "oofcanvas"
-
 # Create a temp working directory.
 tempdir = tempfile.mkdtemp(prefix="oofcanvas-tempdir-" + version + "-")
 print("Using temp directory", tempdir, file=sys.stderr)
@@ -122,7 +120,7 @@ try:
 
     # Clone the git repository whose name is given by the OOFCanvas
     # version number: oofcanvas-version.
-    distdir = distname + "-" + version
+    distdir = "oofcanvas-" + version
     if branch is None:
         cmd = ['git', 'clone', giturl, distdir]
     else:
@@ -134,10 +132,10 @@ try:
     os.chdir(distdir)
 
     # Construct the commit message and new branch name
-    commit_msg = "Building " + distname + " release version " + version
+    commit_msg = f"Building oofcanvas release version {version}"
     if comment:
         commit_msg += " -- " + comment
-    tag = distname + "-" + version
+    tag = "oofcanvas-" + version
     if comment:
         oldtag = tag
         comment.replace(' ', '-')
@@ -154,7 +152,9 @@ try:
         print("Using '%s' instead." % oldtag, file=sys.stderr)
         tag = oldtag
 
-    # Create a branch for the release
+    # Create a branch for the release.  This is done in the cloned
+    # repository in the temp directory, so if dryrun==True it has no
+    # long lasting effects.
 
     # First see if the branch already exists.  "git ls-remote" returns
     # 2 if the branch doesn't exist, when given the --exit-code
@@ -170,7 +170,7 @@ try:
         # the merge.
         newbranch = False
         osCall('git', 'checkout', tag)
-        print("Merging master branch into", tag, file=sys.stderr)
+        print(f"Merging branch into {tag}", file=sys.stderr)
         proc = subprocess.Popen(['git', 'merge', '--no-edit', 'master'],
                                 stdout=subprocess.PIPE, stderr=subprocess.PIPE)
         stdoutdata, stderrdata = proc.communicate()
@@ -180,35 +180,7 @@ try:
             print("Failed to merge master into", tag, file=sys.stderr)
             sys.exit(1)
 
-
-    # # Set the version number in setup.py and oofcanvas/version.C
-    # # The sed command finds a line beginning with
-    # # "version_from_make_dist" and replaces everything after the
-    # # equals sign with a string containing the version number.
-    # sedcmd = '/^version_from_make_dist/s/=.*/= \\\"%s\\\"/' % version
-    # run_sed(sedcmd, "", "setup.py")
-    # run_sed(sedcmd, "oofcanvas", "version.C")
-    
-                           
-    # # Check all the modifications into git, and tag with the version
-    # # number.  It's necessary to go back to the distribution directory
-    # # to use git.
-    # osCall('git', 'add', 'oofcanvas/version.C', 'setup.py')
-
-    # cmd = ['git', 'commit', '--allow-empty', '-m', commit_msg]
-    # print('--->', ' '.join(cmd), file=sys.stderr)
-    # if not dryrun:
-    #     proc = subprocess.Popen(cmd, stdout=subprocess.PIPE,
-    #                             stderr=subprocess.PIPE)
-    #     stdoutdata, stderrdata = proc.communicate()
-    #     if proc.returncode != 0:
-    #         print("Back from commit, status=", proc.returncode, file=sys.stderr)
-    #         print("stdoutdata=", stdoutdata, file=sys.stderr)
-    #         print("stderrdata=", stderrdata, file=sys.stderr)
-    #         sys.exit(0)
-
-    # Push the modifications to the server, unless this is just a dry
-    # run.
+    # Push the branch to the server, unless this is just a dry run.
     if not newbranch:
         cmd = ['git', 'push', 'origin', tag]
     else:
