--- a/make_dist.in
+++ b/make_dist.in
@@ -170,8 +170,9 @@ try:
         # the merge.
         newbranch = False
         osCall('git', 'checkout', tag)
+        mbranch = branch if branch else 'master'
         print(f"Merging branch into {tag}", file=sys.stderr)
-        proc = subprocess.Popen(['git', 'merge', '--no-edit', 'master'],
+        proc = subprocess.Popen(['git', 'merge', '--no-edit', mbranch],
                                 stdout=subprocess.PIPE, stderr=subprocess.PIPE)
         stdoutdata, stderrdata = proc.communicate()
         print(stdoutdata, file=sys.stderr)
