--- a/oofcanvas/oofcanvas.h.in
+++ b/oofcanvas/oofcanvas.h.in
@@ -41,4 +41,15 @@
 #define OOFCANVAS_COORD(obj) OOFCanvas::Coord((obj)[0], (obj)[1])
 #define OOFCANVAS_ICOORD(obj) OOFCanvas::ICoord((obj)[0], (obj)[1])
 
+// This is just for debugging CMake when called by MacPorts. MacPorts
+// is eating CMake "message" output even i"n verbose mode.
+// CMAKE_INSTALL_PREFIX is ${CMAKE_INSTALL_PREFIX}
+// Python3 is ${Python3_EXECUTABLE}
+// Python3_INCLUDE_DIRS is ${Python3_INCLUDE_DIRS}
+// Python3_LIBRARIES is ${Python3_LIBRARIES}
+// Python3_LIBRARY_DIRS is ${Python3_LIBRARY_DIRS}
+// Python3_RUNTIME_LIBRARY_DIRS is ${Python3_RUNTIME_LIBRARY_DIRS}
+// Python3_SITELIB is ${Python3_SITELIB}
+
+
 #endif // OOFCANVAS_ALL_H
