--- a/oofcanvas/oofcanvas.h.in
+++ b/oofcanvas/oofcanvas.h.in
@@ -50,6 +50,7 @@
 // Python3_LIBRARY_DIRS is ${Python3_LIBRARY_DIRS}
 // Python3_RUNTIME_LIBRARY_DIRS is ${Python3_RUNTIME_LIBRARY_DIRS}
 // Python3_SITELIB is ${Python3_SITELIB}
+// PKG_CONFIG_PATH is $ENV{PKG_CONFIG_PATH}
 
 
 #endif // OOFCANVAS_ALL_H
