Fixed a bug in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -305,8 +305,10 @@ if(${OOFCANVAS_PYTHON_API} STREQUAL Python3)
   endif()
   set(OOFCANVAS_PYTHON3_VERSION ${Python3_VERSION_MAJOR}.${Python3_VERSION_MINOR})
   set(OOFCANVAS_PYTHON_VERSION ${OOFCANVAS_PYTHON3_VERSION})
+  set(PYMINOR ${Python3_VERSION_MINOR})
 else()
   set(PYMAJOR 2)
+  set(PYMINOR 7)
   find_package(Python2 2.7 COMPONENTS Interpreter Development)
   set(OOFCANVAS_PYTHON_VERSION ${Python2_VERSION_MAJOR}.${Python2_VERSION_MINOR})
 endif()
