--- a/make_dist.in
+++ b/make_dist.in
@@ -22,37 +22,16 @@ import time
 
 #=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=#
 
-## Utilities
+## Utility function for the simplest subprocess invocation
 
 def osCall(*args):
     print("--->", ' '.join(args), file=sys.stderr)
-    status = subprocess.call(args)
-    if status != 0:
+    proc = subprocess.run(args)
+    if proc.returncode != 0:
         print("Failed to execute", ' '.join(args), file=sys.stderr)
         print("Aborting!", file=sys.stderr)
         sys.exit(status)
         
-def run_sed(sedcmd, srcdir, srcfile):
-    # Process the given file with the given sed command, and
-    # replace the file with the result.
-
-    # Don't create a temp file with mkstemp, because it uses overly
-    # strict permissions, and others need to be able to read the file.
-    # Use a temp directory instead.
-    tmpdir = tempfile.mkdtemp()
-    destpath = os.path.join(tmpdir, srcfile)
-    dest = open(destpath, "w")
-    srcpath = os.path.join(srcdir, srcfile)
-    proc = subprocess.Popen(["sed", sedcmd, srcpath], stdout=dest,
-                            stderr=subprocess.PIPE)
-    stdoutdata, stderrdata = proc.communicate()
-    if proc.returncode != 0:
-        print("sed command failed:", stderrdata, file=sys.stderr)
-        sys.exit(proc.returncode)
-    dest.close()
-    os.rename(destpath, srcpath)
-    os.rmdir(tmpdir)
-
 #=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=##=--=#
 
 options = ['comment=', 'dryrun', 'help', 'noclean', 'branch=']
@@ -105,14 +84,13 @@ print("Using temp directory", tempdir, file=sys.stderr)
 
 try:
     # Get the git repository location
-    proc = subprocess.Popen(['git', 'remote', 'get-url', 'origin'],
-                            stdout=subprocess.PIPE, stderr=subprocess.PIPE)
-    stdoutdata,stderrdata = proc.communicate()
-    if stderrdata:
+    proc = subprocess.run(['git', 'remote', 'get-url', 'origin'],
+                          capture_output=True, text=True)
+    if proc.stderr:
         print("*** Failed to get git repository!", \
-            stderrdata.strip(), file=sys.stderr)
+            proc.stderr.strip(), file=sys.stderr)
         sys.exit(1)
-    giturl = stdoutdata.decode().strip()
+    giturl = proc.stdout.strip()
 
     # cd to the temp directory
     print("Changing directory to", tempdir, file=sys.stderr)
@@ -141,12 +119,10 @@ try:
         comment.replace(' ', '-')
         tag += "--" + comment
     # Check and fix the tag if it's not legal
-    proc = subprocess.Popen(['git', 'check-ref-format', '--normalize',
-                             '--allow-onelevel', tag],
-                            stdout=subprocess.PIPE, stderr=subprocess.PIPE)
-    stdoutdata, stderrdata = proc.communicate()
+    cmd = ['git', 'check-ref-format', '--normalize', '--allow-onelevel', tag]
+    proc = subprocess.run(cmd, capture_output=True, text=True)
     if proc.returncode == 0:    # success
-        tag = stdoutdata.decode().strip()
+        tag = proc.stdout.strip()
     else:
         print("Failed to convert '%s' to a legal tag." % tag, file=sys.stderr)
         print("Using '%s' instead." % oldtag, file=sys.stderr)
@@ -159,8 +135,8 @@ try:
     # First see if the branch already exists.  "git ls-remote" returns
     # 2 if the branch doesn't exist, when given the --exit-code
     # argument.
-    if subprocess.call(['git', 'ls-remote', '--exit-code', 'origin', tag],
-                       stdout=None, stderr=None) == 2:
+    cmd = ['git', 'ls-remote', '--exit-code', 'origin', tag]
+    if subprocess.run(cmd).returncode == 2:
         # The branch doesn't already exist.
         newbranch = True
         osCall('git', 'checkout', '-b', tag)
@@ -172,12 +148,14 @@ try:
         osCall('git', 'checkout', tag)
         mbranch = branch if branch else 'master'
         print(f"Merging branch into {tag}", file=sys.stderr)
-        proc = subprocess.Popen(['git', 'merge', '--no-edit', mbranch],
-                                stdout=subprocess.PIPE, stderr=subprocess.PIPE)
-        stdoutdata, stderrdata = proc.communicate()
-        print(stdoutdata, file=sys.stderr)
+        proc = subprocess.run(['git', 'merge', '--no-edit', mbranch],
+                              text=True, capture_output=True)
+        # proc = subprocess.Popen(['git', 'merge', '--no-edit', mbranch],
+        #                         stdout=subprocess.PIPE, stderr=subprocess.PIPE)
+        # stdoutdata, stderrdata = proc.communicate()
+        print(proc.stdout, file=sys.stderr)
         if proc.returncode != 0:
-            print(stderrdata, file=sys.stderr)
+            print(proc.stderr, file=sys.stderr)
             print("Failed to merge master into", tag, file=sys.stderr)
             sys.exit(1)
 
